Finished testing my new library

--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -1,25 +1,23 @@
 ---
-  const {title} = Astro.frontmatter
+const { title } = Astro.props.frontmatter;
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{title ?? "Home"}</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{title ?? "Home"}</title>
+  </head>
+  <body>
+    <header>
+      <div>This is the {title ?? "Home"} layout</div>
+    </header>
 
-<header>
-  <div> This is the {title?? "Home"} layout </div>
-</header>
-
-<main>
-  <slot/>
-</main>
-<footer>
-</footer>
-</body>
+    <main>
+      <slot />
+    </main>
+    <footer>Im' the footer</footer>
+  </body>
 </html>
