--- a/src/layouts/posts.astro
+++ b/src/layouts/posts.astro
@@ -1,15 +1,24 @@
+---
+
+const {frontmatter} = Astro.props
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>post One</title>
+  <title>Post Title</title>
 </head>
 <body>
-  This is the first post
-
+  This layout is empty and needs to be used for posts
   <slot />
-  It's spicy
+
+  <time 
+  datetime={frontmatter?.pubDate ||  new Date().getFullYear() }
+  >
+  {frontmatter?.pubDate||new Date().getFullYear()}
+  </time>
 </body>
 </html>
