--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
----
----
+
 
 <html lang="en">
 	<head>
@@ -11,5 +10,11 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+
+		<a href="/posts/post-one">Post One</a>
+		<a href="/post-two">Post Two</a>
+		<a href="/post-three">Post Three</a>
+		<a href="/post-four">Post Four</a>
+
 	</body>
 </html>
