--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@
 		<a href="/post-two">Post Two</a>
 		<a href="/post-three">Post Three</a>
 		<a href="/post-four">Post Four</a>
+		<a href="/posts/react/use-state">Use State</a>
 
 	</body>
 </html>
